# xyz

./: Deployment.md  Dockerfile  README.md  appspec.yml  docker-compose.production.yml  docker-compose.yml  migrate.Dockerfile  nginx.conf
.github/workflows/: client.yaml  release.yml  rust.yml
api/: .env.template  Cargo.toml  README.md
api/migrations/: 20221010130715_initial_db_schema.sql  20221017162424_users_gh.sql  20221020124223_evals_new.sql  20221024123449_blobs.sql  20221024125223_auth_func.sql  20221101172152_experiments.sql  20221101180150_timing.sql  20221101191709_timing.sql  20221102135141_auth_func.sql  20221106120557_waitlist.sql  20221112230619_result_json.sql  20221122094436_public-blob.sql  20221126104912_pageloads.sql  20221127125050_pageloads-auth.sql  20221127155229_pageloads-geo.sql
api/src/: config.rs  lib.rs  main.rs  msg_pack.rs  state.rs
api/src/extractors/: mod.rs  with_blob.rs
api/src/handlers/: api_key.rs  blob.rs  eval.rs  experiment.rs  login.rs  mod.rs  user.rs  waitlist.rs
api/src/middlewares/: api_auth.rs  auth.rs  jwt_auth.rs  mod.rs
api/src/models/: mod.rs
api/src/models/api_key/: api_key_dao.rs  api_key_routes.rs  mod.rs
api/src/models/eval/: eval_dao.rs  eval_routes.rs  mod.rs
api/src/models/user/: mod.rs  user_dao.rs  user_routes.rs
api/src/persisters/: api_key.rs  blob.rs  eval.rs  experiment.rs  mod.rs  s3store.rs  user.rs  waitlist.rs
app/: .gitignore  package-lock.json  package.json  remix.config.js  server.ts  tailwind.config.js
app/app/: jwt.server.ts  root.tsx  session.server.ts
app/app/api/: index.ts
app/app/components/: Button.tsx  Container.tsx  Footer.tsx  Header.tsx  NavLink.tsx
app/app/routes/: dashboard.tsx  index.tsx  login.tsx  waitlist.ts
client/: .gitignore  LICENSE  LICENSE.txt  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
client/.github/workflows/: main.yaml
client/doc/: advanced.md  intro.md
client/doc/libraries/: ml.md
client/docs/: conf.py  index.md  index.rst  introduction.md
client/docs/_static/css/: custom.css
client/docs/_themes/hitsave_theme/: layout.html
client/docs/guides/: customise.md  datasets.md  development.md  files.md  getting_started.md  how_it_works.md  installation.md  ml.md  why.md
client/docs/module/: decorators.rst  files.rst
client/docs/tutorials/: balloons.md
client/examples/: cereal.py  chess-train.py  detectron2.py  eg_detectron2.py  fashoinMNIST.py  lightning.py  readme.txt  sentiment.py
client/src/hitsave/: PIL_support.py  __about__.py  __init__.py  __main__.py  _version.py  authenticate.py  blobstore.py  cli.py  cloudstore.py  cloudutils.py  codegraph.py  config.py  console.py  decorator.py  deep.py  deephash.py  evalstore.py  filesnap.py  graph.py  localstore.py  project.py  server.py  session.py  storecompose.py  support_extra.py  support_pil.py  support_torch.py  symbol.py  tinyorm.py  types.py  util.py  visualize.py
client/src/hitsave/server/: core.py  hsptypes.py  jsonrpc.py  kernel.py  listdiff.py  lsp.py  lsptypes.py  magic.py  proxy_session.py  reactor.py  transport.py  webviewserver.py
client/src/hitsave/server/reactor/: __init__.py  element.py  fiber.py  html.py  manager.py  patch.py  proxy_reactor.py  rendering.py  textnode.py  vdom.py
client/src/hitsave/torch/: __init__.py
client/src/hitsave/util/: __init__.py  adapt.py  asyncio.py  config_file.py  current.py  dispatch.py  listdiff.py  misc.py  ofdict.py  tinyorm.py  type_helpers.py
client/test/: __init__.py  conftest.py  deep.py  deepeq.py  strat.py  test_codegraph.py  test_deepeq.py  test_deephash.py  test_fibo.py  test_listdiff.py  test_misc.py  test_ofdict.py  test_save.py  test_tinyorm.py  test_torch.py  test_util.py
client/test/snapshots/test_codegraph/test_graph_snap/: test_graph_snap.txt
client/test/snapshots/test_codegraph/test_module_imports/: code_imports.txt  externs.txt
client/test/snapshots/test_deephash/test_deephash_snapshot/: example_hashes.txt
client/test/snapshots/test_util/test_human_size/: bytes
deploy/: .gitignore  api.dev.Dockerfile  api.prod.Dockerfile  docker-compose.production.yml  docker-compose.yml  migrate.dev.Dockerfile  migrate.prod.Dockerfile  nginx.conf  nginx.dev.Dockerfile  web.prod.Dockerfile
deploy/aws/scripts/: after-install.sh  application-stop.sh  before-install.sh  stop_server.sh
deploy/nginx/templates/: api.conf.template  default.conf.template  www.conf.template
doc/: README.md  codegraph.md
doc/deployment/: README.md
doc/deployment/history/: 20221116-initial-deployment.md  20230513-tls-cert-update.md  20230829-tls-cert-update.md
hitsave/: README.md  requirements.txt
hitsave-api/: build.sh
hitsave-api/migrations/: 20221012111837_users.sql
hitsave-vscode/: package.json
hitsave-vscode/src/: client.ts  codelens.ts  extension.ts
hitsave-web/components/Button/: Base.tsx  Button.module.scss  index.tsx
hitsave-web/components/CodeAnim/: code.ts
hitsave-web/components/Footer/: Footer.module.scss  index.tsx
hitsave-web/components/Logo/: index.tsx
hitsave-web/components/Menu/: index.tsx
hitsave-web/components/Pricing/: index.tsx
hitsave-web/pages/: index.tsx
hitsave-web/styles/: Home.module.scss  breakpoints.scss  globals.css
hitsave/doc/: getting_started.md
hitsave/src/hitsave/: __init__.py  cloudstore.py  codegraph.py  config.py  decorator.py  deep.py  deepeq.py  localstore.py  lsp.py  server.py  session.py  storecompose.py  types.py
hitsave/test/: test_codegraph.py  test_deephash.py
vscode/: CHANGELOG.md  README.md  build.js  build.mjs  package-lock.json  package.json  tsconfig.json
vscode/src/: client.ts  extension.ts
vscode/webview/: app.tsx  rpc.tsx  tsconfig.json
web/: .env.template  .gitignore  README.md  package.json  remix.config.js  server.ts  tailwind.config.js
web/components/Button/: TypeformButton.tsx
web/components/CodeAnim/: CodeAnim.module.scss  index.tsx
web/components/Menu/: Menu.module.scss
web/icons/: Hamburger.tsx
web/pages/: _document.tsx
web/src/: root.tsx  session.server.ts  tailwind.css
web/styles/: colors.scss
(+42 files in other folders)
