[package]
name = "hitsave-api"
version = "0.1.0"
authors = ["Ed Ayers", "George Seabridge"]
edition = "2021"

[lib]
doctest = false

[features]
default = [ "postgres" ]
postgres = [ "sqlx/postgres"]

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [ "postgres", "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json" ]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.rand]
version = "0.8"
features = [
    "getrandom"          # Allows seeding from entropy source
]

[dependencies.reqwest]
version = "0.11"
features = [
    "json"
]

[dependencies.hyper]
version = "0.14.20"
features = [
    "stream"
]

[dependencies]
actix-http = { version = "3.2.2", features = ["http2", "ws"] }
actix-utils = "3.0.1"
base64 = "0.11.0"
bytes = "1"
log = "0.4"
derive_more = "0.99.8"
mime = "0.3"
futures-core = { version = "0.3.7", default-features = false }
rmp-serde = "1.1.1"
dotenv = "0.15"
lipsum = "0.8"
clap =  { version = "3.0", features = [ "derive" ] }
tokio = { version = "1.15.0", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }
nonblock-logger = { version = "0.1.6", default-features = false, features = ["color", "dbg"] }
chrono =  { version = "0.4.19", features = ["serde"] }
rust_decimal = { version = "1.10.3", features = [ "serde-float" ] }
validator = { version = "0.15", features = ["derive"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_bytes = "0.11"
serde_qs = "0.8.2"
serde_json = "1.0.63"
json5 = "0.4.0"
ring = "0.16.20"
bcrypt = "0.10.0"
hex = "0.4.2"
jsonwebtoken = "7.2.0"
actix-web = "4.1"
actix-rt = "2.1.0"
lazy_static = "1.4.0"
async-trait = "0.1.42"
futures = "0.3.13"
thiserror = "1.0.24"
anyhow = "1.0.38"
url = "2.2.1"
rand_chacha = "0.3.1"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
blake3 = "1.3.1"
aws-smithy-http = "0.49.0"
simple_logger = "2.3.0"
