[project]
name = "hitsave"
version = "0.0.1"
authors = [
  { name="E.W.Ayers", email="contact@edayers.com" },
]
description = "Holistic data caching system."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "blake3 ~= 0.3.1",
  "typer ~= 0.6.1",
  "aiohttp ~= 3.8",
  "requests ~= 2.28",
  "typing_extensions",
  "python-dateutil",
]

[project.scripts]
hitsave = "hitsave:main_cli"

[project.urls]
"Homepage" = "https://github.com/hitsave-io/hitsave"
"Bug Tracker" = "https://github.com/hitsave-io/hitsave/issues"