[project]
name = "hitsave"
authors = [
  { name="E.W.Ayers", email="contact@edayers.com" },
]
description = "Holistic data caching system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "blake3 ~= 0.3.1",
  "typer ~= 0.6.1",
  "aiohttp ~= 3.8",
  "requests ~= 2.28",
  "typing_extensions",
  "python-dateutil",
  "rich",
]
dynamic = ["version"]

[project.scripts]
hitsave = "hitsave:main_cli"

[project.urls]
"Homepage" = "https://hitsave.io"
"Bug Tracker" = "https://github.com/hitsave-io/hitsave/issues"
"Documentation" = "https://docs.hitsave.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "pytest", "pytest-cov", "hypothesis", "pytest-snapshot"
]
[tool.hatch.envs.docs]
dependencies = [
  "sphinx", "myst-parser", "sphinx-book-theme"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hitsave --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.hatch.version]
path = "src/hitsave/__about__.py"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/hitsave/__about__.py"
]