[project]
name = "hitsave"
authors = [
  { name="E.W.Ayers", email="contact@edayers.com" },
  { name="George Seabridge", email="seabo@hitsave.io" },
]
description = "Holistic data caching system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "blake3 ~= 0.3.1",
  "typer ~= 0.6.1",
  "aiohttp ~= 3.8",
  "requests ~= 2.28",
  "typing_extensions",
  "python-dateutil",
  "rich",
]
dynamic = ["version"]

[project.scripts]
hitsave = "hitsave:main_cli"

[project.urls]
"Homepage" = "https://hitsave.io"
"Bug Tracker" = "https://github.com/hitsave-io/xyz/issues"
"Documentation" = "https://docs.hitsave.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.docs]
dependencies = [
  "sphinx", "myst-parser", "sphinx-book-theme",
  "sphinx-gallery", "pillow",
]
[tool.hatch.envs.docs.scripts]
build = "cd docs && make html"

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hitsave --cov=tests {args}"
test = "cov --no-cov {args}"
snap = "test --snapshot-update"

[tool.hatch.envs.test]
dependencies = [
  "pytest", "pytest-cov", "hypothesis", "pytest-snapshot",
  "numpy", "pandas", "pillow",
  "torch; python_version < '3.11'"
]

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310"]

[tool.hatch.version]
path = "src/hitsave/__about__.py"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/hitsave/__about__.py"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/test",
  "/examples",
  "/.hypothesis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hitsave"]